WIP User Story 2 - added current location

--- a/moments/Info.plist
+++ b/moments/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>To be able to display your current location on the map.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To be able to notify you about moments nearby.</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
